--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
