--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   "keywords": [],
   "author": "Tristin",
   "dependencies": {
-    "apollo-boost": "^0.4.4",
     "apollo-server": "^2.9.9",
     "bcrypt": "^3.0.6",
+    "chokidar": "^3.3.0",
     "dotenv": "^8.2.0",
-    "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.7.11",
-    "vue-apollo": "^3.0.0"
+    "mongoose": "^5.7.11"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
