--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.4",
-    "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -17,11 +16,13 @@
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "roboto-fontface": "^0.10.0",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-apollo": "^3.0.0",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-socket.io": "^2.1.1-b",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
