--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^3.6.1",
