--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Tristin",
   "dependencies": {
     "apollo-server": "^2.9.9",
+    "apollo-server-express": "^2.9.13",
     "bcrypt": "^3.0.6",
     "chokidar": "^3.3.0",
     "dotenv": "^8.2.0",
+    "graphql-import": "^0.7.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.7.11",
