update to use socket io-client in app.vue / delay refreshSongInfo

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,7 +33,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx", "src/store/current.js"
+    "tests/**/*.tsx", "src/store/current.js", "src/main.ts"
   ],
   "exclude": [
     "node_modules"
