--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
-    "vue-socket.io": "^2.1.1-b",
+    "vue-socket.io": "^3.0.9",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
