--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "howler": "^2.1.2",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "roboto-fontface": "^0.10.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
